Bug 497691 - Falkon crashes when hardware acceleration is on (Qt 6.9)
Summary: Falkon crashes when hardware acceleration is on (Qt 6.9)
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.12.0
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-19 19:22 UTC by daron439
Modified: 2024-12-20 19:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2024-12-19 19:22:51 UTC
SUMMARY
Falkon no longer starts with the "Use hardware acceleration" option.
Probably because of https://codereview.qt-project.org/c/qt/qtwebengine/+/583383

STEPS TO REPRODUCE
1. Enable Use hardware acceleration

OBSERVED RESULT
fails to start with:

Only --use-gl=angle is supported on this platform.
[5199:5267:1219/221808.307250:ERROR:gl_factory.cc(129)] Requested GL implementation (gl=desktop-gl,angle=none) not found in allowed implementations: [(gl=egl-angle,angle=default),(gl=disabled,angle=none)].
Falkon: 2 extensions loaded
Fatal: GLOzone not found for unknown


EXPECTED RESULT
Falkon starts with enabled "Use hardware acceleration"

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 6.9.0-beta1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-12-19 20:48:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/106
Comment 2 daron439 2024-12-20 16:42:44 UTC
It works, thanks for the fix!
Comment 3 Juraj 2024-12-20 19:16:32 UTC
Git commit 902e8c0279df4c02948dd6709e9a58b0ae3fa3f9 by Juraj Oravec.
Committed on 20/12/2024 at 19:16.
Pushed by jurajo into branch 'master'.

Use angle backend for GPU acceleration on Qt 6.9+

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +7    -2    src/lib/app/mainapplication.cpp

https://invent.kde.org/network/falkon/-/commit/902e8c0279df4c02948dd6709e9a58b0ae3fa3f9