Use angle backend for GPU acceleration on Qt 6.9+

BUG: 497691

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>